# NDARC_keyword_extraction_new

./: .gitignore  README.md  UNDOC.ipynb  Untitled.ipynb  Untitled1.ipynb  gemma2_keywords_extraction.ipynb  main-drug-sold.ipynb  mistral-nemo_keywords_extraction-Copy1.ipynb  mistral-nemo_keywords_extraction.ipynb  phi3.5_keywords_extraction.ipynb  pyproject.toml  requirements.txt
Sparro/: Assessment-Copy1.ipynb  Assessment.ipynb  Data | C.1.csv  Data | C.2.csv  Introduction.docx  Task1.csv  Task1.xlsx  Task3.xlsx  Untitled1.ipynb  Vandit Assessment Report.docx  Vandit Task 3.ipynb
data/: L1L2_mixed_2024Feb-2024May_Incognito.parquet  NPS_benzo_opioid_canna_2024.xlsx  cats1_NPS_add_NM.csv  cats1_NPS_original_NM.csv  new_dict_NM_1.pickle  new_dict_NM_2.pickle  new_dict_NM_3.pickle
output/: all_keywords.csv  all_keywords.xls  gemma2_10.csv  mistral-nemo_10.csv  mistral-nemo_25.csv
output/Main drug/: llama3-1_q4_batchsize_5.csv  llama3-1_q8_batchsize_5.csv
