[tool.poetry]
name = "llama-fine-tuning"
version = "0.1.0"
description = "Fine tuning Llama 3.1 for NDARC"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.4.0"
transformers = "^4.44.0"
datasets = "^2.20.0"
accelerate = "^0.33.0"
jupyter = "^1.1.1"
langchain = "^0.2.15"
langchain-community = "^0.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
